--- a/mm/index.html
+++ b/mm/index.html
@@ -140,29 +140,28 @@
   </section>
   <section class="start">
     <div class="container">
-      <h1>A Client-Centric Approach</h1>
-      <p>Founded in 2006 as an online forex broker, FxPro has always followed a client-centric approach, placing our clients’ needs at the forefront of all our operations. Our commitment to providing investors with a wide range of options when trading the world’s markets helped influence the company’s growth from an online broker specialising in forex, into one providing CFDs on 6 asset classes, with over 280 instruments available to trade.</p>
-      <p>At FxPro, we are dedicated to providing our clients with the latest in trading technology and forex tools through continuous investments in innovation. In addition to new instruments, we regularly update our offering with new platforms and services to meet the varying needs of traders, while honouring our commitment to transparency and fair trading practices.</p>
-      <p>We also offer comprehensive educational material, to help traders learn about online forex trading and the financial markets. Our award-winning customer support team is on hand, 24/5, to assist with any issues you may encounter or questions you may have.</p>
-      <p>The importance we place on customer satisfaction, and our dedication to being more than ‘just another forex broker’, has led to us receiving over 50 UK and international awards for the quality of our services. This includes the ‘Best Forex Provider’ award at the prestigious Investors Chronicle and Financial Times Investment and Wealth Management Awards, which we have received four years in a row (2013-2017).</p>
-      <h2>Start Trading with FxPro in 4 Steps</h2>
-      <p class="start__sub">FxPro was voted ‘Best Forex Broker’ 2014, 2015, and 2016 at the Forex Awards. See how you can start trading with us.</p>
+      <h1>A trader oriented company</h1>
+      <p>MultiplyMarket is a top online forex broker with many years of experience in the market. Multiplymarket being a client-oriented company, placing the needs of every one of our customers is our priority. We are committed to providing all our investors a wide range of options when trading to help them become better at trading and also make profits.</p>
+      <p>At MultiplyMarket, we ensure all our clients are up to date with the market trends and also provide them with latest trading technology and forex tools by investing continuously in innovations. These instruments are updated on a regular basis thereby offering new platforms and services to answer the various questions and meet the need of every trader, in so doing, we are keeping to our promise and commitment to a fair and open trading.</p>
+      <p>Every of our trusted customers also has a 24/7 access to our various comprehensive educational materials. These materials help traders understand and learn more about the various online forex operations, trading and the global market in general. We have a great customer support team who are always and readily available to assist with any problem you might encounter or challenge you might face in the course of trading.</p>
+      <p>At MultiplyMarket we place high importance and emphasis on customer satisfaction, and we are dedicated to being more than just a forex broker to our clients. Make your trading experience worth it, choose a right broker, choose MultiplyMarket!</p>
+      <h2>Begin your trading experience with MultiplyMarket, in 4 easy steps</h2>
       <div class="start__flex">
         <div class="start__box  start__box--register">
-          <b>1. Register</b>
-          <p>Open your Live Trading Account via FxPro Direct</p>
+          <b>1. Sign up</b>
+          <p>Create your Live Trading Account on MultiplyMarket</p>
         </div>
         <div class="start__box  start__box--verify">
-          <b>2. Verify</b>
-          <p>Upload your documents to verify your account</p>
+          <b>2. Verification</b>
+          <p>Upload Necessary Documents to Verify your Account</p>
         </div>
         <div class="start__box  start__box--fund">
-          <b>3. Fund</b>
-          <p>Login to FxPro Direct and deposit funds into your account</p>
+          <b>3. Deposit</b>
+          <p>Login to your Account and Make a Deposit</p>
         </div>
         <div class="start__box  start__box--trade">
-          <b>4. Trade</b>
-          <p>Start trading, and choose from 250+ instruments</p>
+          <b>4. Start Trading</b>
+          <p>Trade and Choose from Numerous Instruments Available on MultiplyMarket</p>
         </div>
       </div>
       <a class="button  button--green" href="#">Get Started</a>
