--- a/mm/index.html
+++ b/mm/index.html
@@ -140,12 +140,12 @@
   </section>
   <section class="start">
     <div class="container">
-      <h1>A trader oriented company</h1>
+      <h1>A trader oriented broker</h1>
       <p>MultiplyMarket is a top online forex broker with many years of experience in the market. Multiplymarket being a client-oriented company, placing the needs of every one of our customers is our priority. We are committed to providing all our investors a wide range of options when trading to help them become better at trading and also make profits.</p>
       <p>At MultiplyMarket, we ensure all our clients are up to date with the market trends and also provide them with latest trading technology and forex tools by investing continuously in innovations. These instruments are updated on a regular basis thereby offering new platforms and services to answer the various questions and meet the need of every trader, in so doing, we are keeping to our promise and commitment to a fair and open trading.</p>
       <p>Every of our trusted customers also has a 24/7 access to our various comprehensive educational materials. These materials help traders understand and learn more about the various online forex operations, trading and the global market in general. We have a great customer support team who are always and readily available to assist with any problem you might encounter or challenge you might face in the course of trading.</p>
       <p>At MultiplyMarket we place high importance and emphasis on customer satisfaction, and we are dedicated to being more than just a forex broker to our clients. Make your trading experience worth it, choose a right broker, choose MultiplyMarket!</p>
-      <h2>Begin your trading experience with MultiplyMarket, in 4 easy steps</h2>
+      <h2>Begin your trading experience with MultiplyMarket in 4 easy steps</h2>
       <div class="start__flex">
         <div class="start__box  start__box--register">
           <b>1. Sign up</b>
@@ -191,8 +191,8 @@
           <li><a href="templates/forex.html">Forex</a></li>
           <li><a href="templates/futures.html">Futures</a></li>
           <li><a href="templates/commodities.html">Commodities</a></li>
-          <li><a href="#">Indices</a></li>
-          <li><a href="#">Stocks</a></li>
+          <li><a href="templates/indices.html">Indices</a></li>
+          <li><a href="templates/stocks.html">Stocks</a></li>
           <li><a href="#">Algo trading</a></li>
         </ul>
         <ul>
