a looooooot of text

--- a/mm/index.html
+++ b/mm/index.html
@@ -183,7 +183,7 @@
           <li><a href="templates/about.html">About Us</a></li>
           <li><a href="templates/careers.html">Careers</a></li>
           <li><a href="#">Press</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="templates/contact.html">Contact</a></li>
           <li><a href="templates/security.html">Security</a></li>
         </ul>
         <ul>
@@ -193,12 +193,12 @@
           <li><a href="templates/commodities.html">Commodities</a></li>
           <li><a href="templates/indices.html">Indices</a></li>
           <li><a href="templates/stocks.html">Stocks</a></li>
-          <li><a href="#">Algo trading</a></li>
+          <li><a href="templates/algo.html">Algo trading</a></li>
         </ul>
         <ul>
           <b>Resources</b>
-          <li><a href="#">FAQ</a></li>
-          <li><a href="#">Terms and Conditions</a></li>
+          <li><a href="templates/faq.html">FAQ</a></li>
+          <li><a href="templates/terms.html">Terms and Conditions</a></li>
           <li><a href="#">Risk Disclosure</a></li>
           <li><a href="#">Privacy Policy</a></li>
           <li><a href="#">Anti-Money Laundering</a></li>
