a looooooot of text

--- a/mm/index.html
+++ b/mm/index.html
@@ -199,9 +199,9 @@
           <b>Resources</b>
           <li><a href="templates/faq.html">FAQ</a></li>
           <li><a href="templates/terms.html">Terms and Conditions</a></li>
-          <li><a href="#">Risk Disclosure</a></li>
-          <li><a href="#">Privacy Policy</a></li>
-          <li><a href="#">Anti-Money Laundering</a></li>
+          <li><a href="templates/risk.html">Risk Disclosure</a></li>
+          <li><a href="templates/privacy.html">Privacy Policy</a></li>
+          <li><a href="templates/anti-money.html">Anti-Money Laundering</a></li>
           <li><a href="#">KYC Policy</a></li>
         </ul>
       </div>
