--- a/mm/index.html
+++ b/mm/index.html
@@ -170,6 +170,20 @@
   <section class="map">
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2699.6868167484!2d8.556589215686767!3d47.418049579172596!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x479aa076592d101f%3A0x809f9fcfc228ddc4!2zTGV1dHNjaGVuYmFjaHN0cmFzc2UgOTUsIDgwNTAgWsO8cmljaCwg0KjQstC10LnRhtCw0YDQuNGP!5e0!3m2!1sru!2sua!4v1517848738320" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>
   </section>
+  <section class="payment">
+    <div class="container">
+      <div class="payment__flex">
+        <div class="payment__box  payment__box--wm"></div>
+        <div class="payment__box  payment__box--sofort"></div>
+        <div class="payment__box  payment__box--ae"></div>
+        <div class="payment__box  payment__box--neteller"></div>
+        <div class="payment__box  payment__box--ideal"></div>
+        <div class="payment__box  payment__box--skrill"></div>
+        <div class="payment__box  payment__box--visa"></div>
+        <div class="payment__box  payment__box--master"></div>
+      </div>
+    </div>
+  </section>
   <footer class="footer">
     <div class="container">
       <div class="footer__flex">
