--- a/mm/index.html
+++ b/mm/index.html
@@ -17,7 +17,7 @@
             <img src="img/logo-w.svg" width="180" height="auto" alt="MultiplyMarket">
             <div class="main-nav__user">
               <a class="button" href="templates/register.html">Open live account</a>
-              <a class="button  button--black" href="#">Log In</a>
+              <a class="button  button--black" href="templates/login.html">Log In</a>
               <a class="button  button--number" href="tel:+442038290032">442038290032</a>
             </div>
           </nav>
