--- a/mm/index.html
+++ b/mm/index.html
@@ -83,7 +83,7 @@
         <div class="trading__box  trading__box--funds">
           <img src="img/trading-3.svg" alt="Secured funds">
           <b>Secured<br>funds</b>
-          <p>Your funds are kept in segregated accounts and we use advanced encryption tools to keep all of your transactions and personal data safe and secured. Also our flat-rate commission on all online equity trades gives you access to our award-winning investing and trading experience. Plus, we keep our pricing simple with no share limits or hidden fees, no trade requirements to access advanced features, and no opening deposit minimums. At MultiplyMarket all transactions are simple and direct. You have nothing to fear as regards your funds or investments.</p>
+          <p>Your funds are kept in segregated accounts and we use advanced encryption tools to keep all of your transactions and personal data safe and secured. Also our flat-rate commission on all online equity trades gives you access to our award-winning investing and trading experience. Plus, we keep our pricing simple with no share limits or hidden fees, no trade requirements to access advanced features, and no opening deposit minimums. At MultiplyMarket all transactions are simple and direct. And your funds and investments are safe and secured.</p>
         </div>
         <div class="trading__box  trading__box--algo">
           <img src="img/trading-4.svg" alt="Algo trading">
