--- a/aff/index.html
+++ b/aff/index.html
@@ -60,6 +60,86 @@
         </div>
       </section>
     </div>
+    <section class="news">
+      <article class="news__card">
+        <div class="container">
+          <div class="news__flex">
+            <div class="news__left">
+              <p>
+                <time>23.09.2017</time> | Опубликовано: Admin
+              </p>
+              <div class="news__preview"></div>
+            </div>
+            <div class="news__right">
+              <h1>Что ожидать от Bitcion и как на этом заработать</h1>
+              <p>Биткоин – самая популярная криптовалюта, курс которой активно растет на разных фондовых биржах и при торгах на бинарных опционах. Согласно мнениям статистов и финансистов, его рост будет еще несколько лет, пока цена не выйдет за рамки 100000$. Уже на данный момент цена за одну монету составляет 4360$ (данные за 27.08.2017 согласно coinmarketcap), и учитывая постоянные скачки валюты, уже через месяц или два её цена может подняться до 5000. В целом, согласно прогнозам, на первый квартал 2018 года планируется, что валюта будет стоит 5200-5500$.</p>
+              <p>На данный момент активно растет спрос на торговлю биткоином с помощью бинарных опционов. Более того, уже разработаны стратегии по заработку Bitcoin.</p>
+              <div class="news__link">
+                <a class="news__more" href="#">Подробнее</a>
+                <div class="news__social">
+                  <a href="#"></a>
+                  <a href="#"></a>
+                  <a href="#"></a>
+                  <a href="#"></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </article>
+      <article class="news__card  news__card--nth">
+        <div class="container">
+          <div class="news__flex">
+            <div class="news__left">
+              <p>
+                <time>23.09.2017</time> | Опубликовано: Admin
+              </p>
+              <div class="news__preview"></div>
+            </div>
+            <div class="news__right">
+              <h1>Что ожидать от Bitcion и как на этом заработать</h1>
+              <p>Биткоин – самая популярная криптовалюта, курс которой активно растет на разных фондовых биржах и при торгах на бинарных опционах. Согласно мнениям статистов и финансистов, его рост будет еще несколько лет, пока цена не выйдет за рамки 100000$. Уже на данный момент цена за одну монету составляет 4360$ (данные за 27.08.2017 согласно coinmarketcap), и учитывая постоянные скачки валюты, уже через месяц или два её цена может подняться до 5000. В целом, согласно прогнозам, на первый квартал 2018 года планируется, что валюта будет стоит 5200-5500$.</p>
+              <p>На данный момент активно растет спрос на торговлю биткоином с помощью бинарных опционов. Более того, уже разработаны стратегии по заработку Bitcoin.</p>
+              <div class="news__link">
+                <a class="news__more" href="#">Подробнее</a>
+                <div class="news__social">
+                  <a href="#"></a>
+                  <a href="#"></a>
+                  <a href="#"></a>
+                  <a href="#"></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </article>
+      <article class="news__card">
+        <div class="container">
+          <div class="news__flex">
+            <div class="news__left">
+              <p>
+                <time>23.09.2017</time> | Опубликовано: Admin
+              </p>
+              <div class="news__preview"></div>
+            </div>
+            <div class="news__right">
+              <h1>Что ожидать от Bitcion и как на этом заработать</h1>
+              <p>Биткоин – самая популярная криптовалюта, курс которой активно растет на разных фондовых биржах и при торгах на бинарных опционах. Согласно мнениям статистов и финансистов, его рост будет еще несколько лет, пока цена не выйдет за рамки 100000$. Уже на данный момент цена за одну монету составляет 4360$ (данные за 27.08.2017 согласно coinmarketcap), и учитывая постоянные скачки валюты, уже через месяц или два её цена может подняться до 5000. В целом, согласно прогнозам, на первый квартал 2018 года планируется, что валюта будет стоит 5200-5500$.</p>
+              <p>На данный момент активно растет спрос на торговлю биткоином с помощью бинарных опционов. Более того, уже разработаны стратегии по заработку Bitcoin.</p>
+              <div class="news__link">
+                <a class="news__more" href="#">Подробнее</a>
+                <div class="news__social">
+                  <a href="#"></a>
+                  <a href="#"></a>
+                  <a href="#"></a>
+                  <a href="#"></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </article>
+    </section>
   </main>
 </body>
 </html>
