--- a/aff/index.html
+++ b/aff/index.html
@@ -149,7 +149,46 @@
           </div>
         </div>
       </article>
+      <section class="control">
+        <div class="container">
+          <div class="control__flex">
+            <!-- <div class="control__left">
+              <label for="select">Категория:</label>
+              <select id="select">
+                <option value="all">Все статьи</option>
+              </select>
+            </div> -->
+            <ul class="control__pagination  control__pagination--right">
+              <li><a href="#"><</a></li>
+              <li><a href="#">1</a></li>
+              <li><a href="#">2</a></li>
+              <li><a href="#">3</a></li>
+              <li><a href="#">4</a></li>
+              <li><a href="#">></a></li>
+            </ul>
+          </div>
+        </div>
+      </section>
     </section>
   </main>
+  <footer class="footer">
+    <div class="container">
+      <div class="footer__flex">
+        <ul>
+          <li><a href="#">О нас</a></li>
+          <li><a href="#">Наши партнеры</a></li>
+          <li><a href="#">Комиссионый план</a></li>
+          <li><a href="#">Вывод средств</a></li>
+          <li><a href="#">Наш блог</a></li>
+        </ul>
+        <ul>
+          <li><a href="#"></a></li>
+          <li><a href="#"></a></li>
+          <li><a href="#"></a></li>
+          <li><a href="#"></a></li>
+        </ul>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
