add mobile version

--- a/aff/index.html
+++ b/aff/index.html
@@ -87,10 +87,10 @@
               <div class="news__link">
                 <a class="news__more" href="#">Подробнее</a>
                 <div class="news__social">
-                  <a href="#"></a>
-                  <a href="#"></a>
-                  <a href="#"></a>
-                  <a href="#"></a>
+                  <a class="news__fb" href="#"></a>
+                  <a class="news__tw" href="#"></a>
+                  <a class="news__vk" href="#"></a>
+                  <a class="news__gp" href="#"></a>
                 </div>
               </div>
             </div>
@@ -113,10 +113,10 @@
               <div class="news__link">
                 <a class="news__more" href="#">Подробнее</a>
                 <div class="news__social">
-                  <a href="#"></a>
-                  <a href="#"></a>
-                  <a href="#"></a>
-                  <a href="#"></a>
+                  <a class="news__fb" href="#"></a>
+                  <a class="news__tw" href="#"></a>
+                  <a class="news__vk" href="#"></a>
+                  <a class="news__gp" href="#"></a>
                 </div>
               </div>
             </div>
@@ -139,10 +139,10 @@
               <div class="news__link">
                 <a class="news__more" href="#">Подробнее</a>
                 <div class="news__social">
-                  <a href="#"></a>
-                  <a href="#"></a>
-                  <a href="#"></a>
-                  <a href="#"></a>
+                  <a class="news__fb" href="#"></a>
+                  <a class="news__tw" href="#"></a>
+                  <a class="news__vk" href="#"></a>
+                  <a class="news__gp" href="#"></a>
                 </div>
               </div>
             </div>
@@ -181,11 +181,11 @@
           <li><a href="#">Вывод средств</a></li>
           <li><a href="#">Наш блог</a></li>
         </ul>
-        <ul>
-          <li><a href="#"></a></li>
-          <li><a href="#"></a></li>
-          <li><a href="#"></a></li>
-          <li><a href="#"></a></li>
+        <ul class="footer__social">
+          <li><a class="footer__link  footer__link--fb" href="#"></a></li>
+          <li><a class="footer__link  footer__link--tw" href="#"></a></li>
+          <li><a class="footer__link  footer__link--vk" href="#"></a></li>
+          <li><a class="footer__link  footer__link--gp" href="#"></a></li>
         </ul>
       </div>
     </div>
