--- a/aff/index.html
+++ b/aff/index.html
@@ -25,14 +25,17 @@
         <a href="#">
           <img src="img/logo.png" alt="Affboat">
         </a>
-        <nav class="main-nav">
-          <ul>
-            <li><a href="#">О нас</a></li>
-            <li><a href="#">Комиссионный план</a></li>
-            <li><a href="#">Вывод средств</a></li>
-            <li><a href="#">Наш блог</a></li>
-            <li class="main-nav__partner"><a href="#">Стать партнером</a></li>
-          </ul>
+        <nav class="main-nav  main-nav--closed  main-nav--nojs">
+          <button class="main-nav__toggle" type="button">Open menu</button>
+          <!-- <div class="container"> -->
+            <ul>
+              <li class="main-nav__item"><a href="#">О нас</a></li>
+              <li class="main-nav__item"><a href="#">Комиссионный план</a></li>
+              <li class="main-nav__item"><a href="#">Вывод средств</a></li>
+              <li class="main-nav__item"><a href="#">Наш блог</a></li>
+              <li class="main-nav__item  main-nav__partner"><a href="#">Стать партнером</a></li>
+            </ul>
+          <!-- </div> -->
         </nav>
       </div>
     </div>
@@ -190,5 +193,6 @@
       </div>
     </div>
   </footer>
+  <script src="js/mobile-menu.js"></script>
 </body>
 </html>
