--- a/mm/index.html
+++ b/mm/index.html
@@ -130,20 +130,24 @@
     <div class="container">
       <div class="edge__flex">
         <div class="edge__box">
-          <b>2014</b>
-          <p>Intrnational Finantial<br>membership nominee</p>
+          <b>2015</b>
+          <p>The Best Forex Brand</p>
+          <small>Investors Chronicle</small>
         </div>
         <div class="edge__box">
-          <b>2014</b>
-          <p>Intrnational Finantial<br>membership nominee</p>
+          <b>2016</b>
+          <p>Best Forex Provider</p>
+          <small>Global Brands Magazine</small>
         </div>
         <div class="edge__box">
-          <b>2014</b>
-          <p>Intrnational Finantial<br>membership nominee</p>
+          <b>2017</b>
+          <p>Best MT5 Broker</p>
+          <small>Shares Awards</small>
         </div>
         <div class="edge__box">
-          <b>2014</b>
-          <p>Intrnational Finantial<br>membership nominee</p>
+          <b>2017</b>
+          <p>Best Execution Broker</p>
+          <small>CFI.co Awards</small>
         </div>
       </div>
     </div>
