--- a/aff/blog.html
+++ b/aff/blog.html
@@ -133,6 +133,46 @@
         </div>
       </div>
     </form>
+    <section class="similar">
+      <div class="container">
+        <div class="similar__flex">
+          <div class="similar__left">
+            <h1>Похожие статьи</h1>
+            <hr class="hr">  
+          </div>
+          <ul class="control__pagination">
+            <li><a href="#"><</a></li>
+            <li><a href="#">1</a></li>
+            <li><a href="#">2</a></li>
+            <li><a href="#">3</a></li>
+            <li><a href="#">4</a></li>
+            <li><a href="#">></a></li>
+          </ul>
+        </div>
+        <div class="similar__flex">
+          <div class="similar__box">
+            <img src="img/placeholder.png" alt="">
+            <p><time>23.09.2017</time> | Опубликовано: Admin</p>
+            <b>Что ожидать от Bitcion и как на этом заработать</b>
+          </div>
+          <div class="similar__box">
+            <img src="img/placeholder.png" alt="">
+            <p><time>23.09.2017</time> | Опубликовано: Admin</p>
+            <b>Что ожидать от Bitcion и как на этом заработать</b>
+          </div>
+          <div class="similar__box">
+            <img src="img/placeholder.png" alt="">
+            <p><time>23.09.2017</time> | Опубликовано: Admin</p>
+            <b>Что ожидать от Bitcion и как на этом заработать</b>
+          </div>
+          <div class="similar__box">
+            <img src="img/placeholder.png" alt="">
+            <p><time>23.09.2017</time> | Опубликовано: Admin</p>
+            <b>Что ожидать от Bitcion и как на этом заработать</b>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
   <footer class="footer">
     <div class="container">
