--- a/mm/index.html
+++ b/mm/index.html
@@ -28,7 +28,7 @@
             <div class="main-nav__user">
               <a class="button" href="templates/register.html">Open live account</a>
               <a class="button  button--black" href="templates/login.html">Log In</a>
-              <a class="button  button--number" href="tel:+442038290032">442038290032</a>
+              <a class="button  button--number" href="tel:++442038290032">+442038290032</a>
             </div>
           </nav>
         </header>
@@ -63,7 +63,7 @@
         </ul>
         <div class="title  title--down">
           <h1>MultiplyMarket</h1>
-          <p>Innovative power tools<br>That align with your goals</p>
+          <p>Innovative power tools<br>that align with your goals</p>
           <a class="button  button--title" href="templates/register.html">Open live account</a>
         </div>
       </div>
@@ -75,7 +75,7 @@
       <div class="trading__flex">
         <div class="trading__left">
           <b>Multyplatform Trading</b>
-          <p>Your goals are unique, so your investment guidance should be too. This is why at MultiplyMarket We take the time to listen and understand what matters most to you before helping you develop and manage your investment strategy. The MT4 is a renowned application which gives you the opportunity to trade Forex, Commodities, and Futures. It is very suitable for those new to trading and also experienced ones, as the technology is well advanced and easy to use.</p>
+          <p>Your goals are unique, so your investment guidance should be too. This is why at MultiplyMarket we take the time to listen and understand what matters most to you before helping you develop and manage your investment strategy. The MT4 is a renowned application which gives you the opportunity to trade Forex, Commodities, and Futures. It is very suitable for those new to trading and also to experienced ones, as the technology is well advanced and easy to use.</p>
         </div>
         <img class="trading__img" src="img/trading-right.jpg">
       </div>
@@ -88,7 +88,7 @@
         <div class="trading__box  trading__box--trans">
           <img src="img/trading-2.svg" alt="Transparent and Trustworthy">
           <b>Transparent AND<br>Trustworthy</b>
-          <p>For some few years now, MultiplyMarket has been proud to help our customers pursue their financial goals while giving them more time to focus on what really matters in life. Everything we offer, from guidance to powerful trading tools, to retirement resources is built around one thing, you. We know it’s important to get professional guidance you can trust. That’s why our experienced, licensed reps are available by phone, email, online, and in-person for one-on-one support when you need it most. You can always count on us.</p>
+          <p>For some few years now, MultiplyMarket has been proud to help our customers pursue their financial goals while giving them more time to focus on what really matters in life. Everything we offer, from guidance to powerful trading tools, to retirement resources is built around one thing, you. We know it’s important to get professional guidance you can trust. That’s why our experienced, licensed reps are available by phone, email, online, and in person for one-on-one support when you need it most. You can always count on us.</p>
         </div>
         <div class="trading__box  trading__box--funds">
           <img src="img/trading-3.svg" alt="Secured funds">
@@ -98,7 +98,7 @@
         <div class="trading__box  trading__box--algo">
           <img src="img/trading-4.svg" alt="Algo trading">
           <b>Algo<br>Trading</b>
-          <p>Algo Trading is that program which gives every the opportunity to trade with better precision and high success rate than he/she would normally get. It makes use of a scenario-based approach and artificial intelligence so as to develop the best trading approach for the circumstances. Different variables such as price, quantity and time period are taken into serious consideration as well. The number of traders that make use of this Algo trading keeps increasing by the day, as it makes the trading journey easy and well profiting.</p>
+          <p>Algo Trading is a program that offers everyone the opportunity to trade with better precision and high success rate than he/she would normally get. It makes use of a scenario-based approach and artificial intelligence so as to develop the best trading approach for the circumstances. Different variables such as price, quantity and time period are taken into serious consideration as well. The number of traders that use our Algo trading keeps increasing by the day, as it makes the trading journey easy and well profiting.</p>
         </div>
       </div>
     </div>
@@ -155,9 +155,9 @@
   <section class="start">
     <div class="container">
       <h1>A trader oriented broker</h1>
-      <p>MultiplyMarket is a top online forex broker with many years of experience in the market. Multiplymarket being a client-oriented company, placing the needs of every one of our customers is our priority. We are committed to providing all our investors a wide range of options when trading to help them become better at trading and also make profits.</p>
-      <p>At MultiplyMarket, we ensure all our clients are up to date with the market trends and also provide them with latest trading technology and forex tools by investing continuously in innovations. These instruments are updated on a regular basis thereby offering new platforms and services to answer the various questions and meet the need of every trader, in so doing, we are keeping to our promise and commitment to a fair and open trading.</p>
-      <p>Every of our trusted customers also has a 24/7 access to our various comprehensive educational materials. These materials help traders understand and learn more about the various online forex operations, trading and the global market in general. We have a great customer support team who are always and readily available to assist with any problem you might encounter or challenge you might face in the course of trading.</p>
+      <p>MultiplyMarket is a top online forex broker with many years of experience in the market. MultiplyMarket being a client-oriented company, places the needs of every one of our customers as its own priority. We are committed to providing all our investors a wide range of options when trading to help them become better at trading and also make profits.</p>
+      <p>At MultiplyMarket, we ensure all our clients are up to date with the market trends and also provide them with latest trading technology and forex tools by investing continuously in innovations. These instruments are updated on a regular basis thereby offering new platforms and services to answer the various questions and meet the need of every trader, in so doing, we are keeping our promise and commitment towards a fair and open trading.</p>
+      <p>Every of our trusted customers also has a 24/7 access to our various comprehensive educational materials. These materials help traders understand and learn more about the various online forex operations, trading and the global market in general. We have a great customer support team which is always and readily available to assist with any problem you might encounter or challenge you might face in the course of trading.</p>
       <p>At MultiplyMarket we place high importance and emphasis on customer satisfaction, and we are dedicated to being more than just a forex broker to our clients. Make your trading experience worth it, choose a right broker, choose MultiplyMarket!</p>
       <h2>Begin your trading experience with MultiplyMarket in 4 easy steps</h2>
       <div class="start__flex">
