small fix pagination

--- a/aff/index.html
+++ b/aff/index.html
@@ -64,7 +64,7 @@
           </div>
           <ul class="control__pagination">
             <li><a href="#"><</a></li>
-            <li><a href="#">1</a></li>
+            <li><a class="control__active" href="#">1</a></li>
             <li><a href="#">2</a></li>
             <li><a href="#">3</a></li>
             <li><a href="#">4</a></li>
@@ -163,7 +163,7 @@
             </div> -->
             <ul class="control__pagination  control__pagination--right">
               <li><a href="#"><</a></li>
-              <li><a href="#">1</a></li>
+              <li><a class="control__active" href="#">1</a></li>
               <li><a href="#">2</a></li>
               <li><a href="#">3</a></li>
               <li><a href="#">4</a></li>
