--- a/aff/blog.html
+++ b/aff/blog.html
@@ -142,7 +142,7 @@
           </div>
           <ul class="control__pagination">
             <li><a href="#"><</a></li>
-            <li><a href="#">1</a></li>
+            <li><a class="control__active" href="#">1</a></li>
             <li><a href="#">2</a></li>
             <li><a href="#">3</a></li>
             <li><a href="#">4</a></li>
@@ -150,26 +150,34 @@
           </ul>
         </div>
         <div class="similar__flex">
-          <div class="similar__box">
-            <img src="img/placeholder.png" alt="">
-            <p><time>23.09.2017</time> | Опубликовано: Admin</p>
-            <b>Что ожидать от Bitcion и как на этом заработать</b>
-          </div>
-          <div class="similar__box">
-            <img src="img/placeholder.png" alt="">
-            <p><time>23.09.2017</time> | Опубликовано: Admin</p>
-            <b>Что ожидать от Bitcion и как на этом заработать</b>
-          </div>
-          <div class="similar__box">
-            <img src="img/placeholder.png" alt="">
-            <p><time>23.09.2017</time> | Опубликовано: Admin</p>
-            <b>Что ожидать от Bitcion и как на этом заработать</b>
-          </div>
-          <div class="similar__box">
-            <img src="img/placeholder.png" alt="">
-            <p><time>23.09.2017</time> | Опубликовано: Admin</p>
-            <b>Что ожидать от Bitcion и как на этом заработать</b>
-          </div>
+          <a href="#">
+            <div class="similar__box">
+              <img src="img/placeholder.png" alt="">
+              <p><time>23.09.2017</time> | Опубликовано: Admin</p>
+              <b>Что ожидать от Bitcion и как на этом заработать</b>
+            </div>
+          </a>
+          <a href="#">
+            <div class="similar__box">
+              <img src="img/placeholder.png" alt="">
+              <p><time>23.09.2017</time> | Опубликовано: Admin</p>
+              <b>Что ожидать от Bitcion и как на этом заработать</b>
+            </div>
+          </a>
+          <a href="#">
+            <div class="similar__box">
+              <img src="img/placeholder.png" alt="">
+              <p><time>23.09.2017</time> | Опубликовано: Admin</p>
+              <b>Что ожидать от Bitcion и как на этом заработать</b>
+            </div>
+          </a>
+          <a href="#">
+            <div class="similar__box">
+              <img src="img/placeholder.png" alt="">
+              <p><time>23.09.2017</time> | Опубликовано: Admin</p>
+              <b>Что ожидать от Bitcion и как на этом заработать</b>
+            </div>
+          </a>
         </div>
       </div>
     </section>
