--- a/forex/about-us/careers.html
+++ b/forex/about-us/careers.html
@@ -45,7 +45,7 @@
         <p>Careers</p>
         <div class="sub-menu__box  sub-menu__box--about">
           <a class="sub-menu__logo" href="../index.html">
-            <img src="../img/logo-menu.png" alt="Forex24">
+            <img src="../img/logo-menu.png" alt="Forex24Global">
           </a>
           <a href="licenses-and-regulations">LICENSES AND REGULATIONS</a>
           <a href="security-of-funds.html">SECURITY OF FUNDS</a>
@@ -71,7 +71,8 @@
       <p>We offer a challenging and rewarding working environment, where every employee counts and can make a difference.</p>
       <p>We believe in the value of our people and their input, the benefits of teamwork and the sense of belonging to our organisation.</p>
       <p>We are passionate about developing our people and provide long-term career paths.</p>
-      <p>We are governed by the European Markets in Financial Instruments Directive (MiFID), fully supporting its purpose to provide unified investment services regulatory management in the European Economic Area (EEA), for fair practice, increasing efficiency, competition, consumer and employee protection.</p>
+      <!-- <p>We are governed by the European Markets in Financial Instruments Directive (MiFID), fully supporting its purpose to provide unified investment services regulatory management in the European Economic Area (EEA), for fair practice, increasing efficiency, competition, consumer and employee protection.</p> -->
+      <p>We requirements for best employment practices as well as providing high levels of worker satisfaction.</p>
       <p>We abide by the European Labour Law and the requirements for best employment practices as well as providing high levels of worker satisfaction.</p>
       <div class="careers__flex">
         <div class="careers__box  careers__box--support">
@@ -141,13 +142,13 @@
           </div>
           <div class="page-footer__contact">
             <b>Support</b>
-            <p>e-mail: support@forex24.com</p>
+            <p>e-mail: support@forex24global.com</p>
           </div>
           <p class="page-footer__text">UK Number: +442080891644</p>
         </div>
       </div>
       <div class="page-footer__copyright">
-        <p>© 2017 All rights reserved LYDYA FINANCIAL LTD.<br>Located at 155 Ayias Fylaxeos, Ersi Court Suite 202, 3083 Limassol, Cyprus.</p>
+        <p>© 2017 All rights reserved LYDYA FINANCIAL LTD.<br>Located at Ajeltake Road, Trust Company Complex, MH 96960, Ajeltake Island, Majuro, Marshall Islands..</p>
         <p>Forex24 Global is a brand owned and operated by Lydya Financial Ltd, a Cyprus Investment Firm (CIF) regulated and supervised by the Cyprus Securities and Exchange Commission (CySEC) with CIF Licence number 300/16 and Company registration number HE334292.</p>
         <p>The Company is also registered with: FCA in UK with reg. no. 782501; BaFin in Germany with reg. no. 1349943; CONSOB in Italy with reg. no. 4624; ACP in France with reg. no. 75980; CNMV in Spain with reg. no. 4373.</p>
       </div>
