--- a/forex/index.html
+++ b/forex/index.html
@@ -165,7 +165,9 @@
     </div>
   </section>
   <section class="sign">
-    <p class="sign__title">Sign up NOW</p>
+    <p class="sign__title">"How many millionaires do you know who have become wealthy by investing in savings accounts? I rest my case." – </p>
+    <b>Robert G. Allen</b>
+    <p class="sign__call">Sign up NOW</p>
     <p class="sign__text">And get expert<br>analytics by our lawyers</p>
     <form action="" method="post">
       <input class="sign__input" type="email" placeholder="Enter your E-mail">
@@ -197,7 +199,7 @@
     <div class="scroll__first">
       <div class="container">
         <div class="scroll__logo">
-          <img src="img/scroll-logo.png" alt="Forex24">
+          <img src="img/scroll-logo.png" alt="Forex24Global">
         </div>
       </div>
     </div>
@@ -293,13 +295,13 @@
           </div>
           <div class="page-footer__contact">
             <b>Support</b>
-            <p>e-mail: support@forex24.com</p>
+            <p>e-mail: support@forex24global.com</p>
           </div>
           <p class="page-footer__text">UK Number: +442080891644</p>
         </div>
       </div>
       <div class="page-footer__copyright">
-        <p>© 2017 All rights reserved LYDYA FINANCIAL LTD.<br>Located at 155 Ayias Fylaxeos, Ersi Court Suite 202, 3083 Limassol, Cyprus.</p>
+        <p>© 2017 All rights reserved LYDYA FINANCIAL LTD.<br>Located at Ajeltake Road, Trust Company Complex, MH 96960, Ajeltake Island, Majuro, Marshall Islands..</p>
         <p>Forex24 Global is a brand owned and operated by Lydya Financial Ltd, a Cyprus Investment Firm (CIF) regulated and supervised by the Cyprus Securities and Exchange Commission (CySEC) with CIF Licence number 300/16 and Company registration number HE334292.</p>
         <p>The Company is also registered with: FCA in UK with reg. no. 782501; BaFin in Germany with reg. no. 1349943; CONSOB in Italy with reg. no. 4624; ACP in France with reg. no. 75980; CNMV in Spain with reg. no. 4373.</p>
       </div>
