--- a/forex/index.html
+++ b/forex/index.html
@@ -14,7 +14,7 @@
   <link rel="icon" type="image/png" sizes="16x16" href="img/fav/favicon-16x16.png">
   <link rel="manifest" href="img/fav/manifest.json">
   <link rel="mask-icon" href="img/fav/safari-pinned-tab.svg" color="#5bbad5">
-  <meta name="theme-color" content="#ffffff">
+  <meta name="theme-color" content="#2e2963">
 </head>
 <body>
   <header class="page-header">
